# index.js
@@ -5,6 +5,7 @@ import cors from 'cors';
 import AuthRoute from './Routes/v1/AuthRoute.js';
 import UserRoute from './Routes/v1/UserRoute.js';
 import RecipeRoute from './Routes/v1/RecipeRoute.js';
+import ResumeRoute from './Routes/v1/ResumeRoute.js';
 import PostRoute from './Routes/v1/PostRoute.js';
 import UploadRoute from './Routes/v1/UploadRoute.js';
 import ChatRoute from './Routes/v1/ChatRoute.js';
@@ -42,6 +43,7 @@ app.use(bodyParser.urlencoded({ limit: '30mb', extended: true }));
 app.use('/api/v1/auth', AuthRoute);
 app.use('/api/v1/user', UserRoute);
 app.use('/api/v1/recipe', RecipeRoute);
+app.use('/api/v1/resume', ResumeRoute);
 app.use('/api/v1/posts', PostRoute);
 app.use('/api/v1/upload', UploadRoute);
 app.use('/api/v1/chat', ChatRoute);
